--- a/src/reset.css
+++ b/src/reset.css
@@ -30,3 +30,7 @@ body,
 .swipe-button-caret {
   background: rgba(42, 115, 255, 1) !important;
 }
+
+.font-13, .font-13 span {
+  font-size: 13px !important;
+}
